--- a/index.html
+++ b/index.html
@@ -56,21 +56,89 @@
     */
 
     /* 👉 Task 1 - [HINT] only the flex container needs to be manipulated */
+    [id^=flexContainer] {
+      display: flex;
+    }
+    #flexContainer1 {
+      justify-content: space-around;
+    }
 
     /* 👉 Task 2 - [HINT] the flex container needs to change direction */
+    #flexContainer2 {
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
 
     /* 👉 Task 3 - [HINT] the flex direction can be reversed */
+    #flexContainer3 {
+      flex-direction: column-reverse;
+      align-items: flex-end;
+      justify-content: flex-end;
+    }
 
     /* 👉 Task 4 - [HINT] the flex items need a new order */
+    #flexContainer4 {
+      justify-content: space-around;
+      align-items: flex-end;
+    }
+    #flexContainer4 div:nth-of-type(1) {
+      order: 2;
+    }
+    #flexContainer4 div:nth-of-type(2) {
+      order: 3;
+    }
+    #flexContainer4 div:nth-of-type(3) {
+      order: 1;
+    }
 
     /* 👉 Task 5 - [HINT] research align-self */
+    #flexContainer5 {
+      flex-direction: column;
+      justify-content: space-around;
+    }
+    #flexContainer5 div:nth-of-type(2) {
+      align-self: center;
+    }
 
     /* 👉 Task 6 - [HINT] flex items can be flex containers */
+    #flexContainer6 {
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      align-items: flex-end;
+    }
+    #flexContainer6 div:nth-of-type(3) {
+      align-self: flex-start;
+    }
+    #flexContainer6 div:nth-of-type(2) {
+      align-items: flex-end;
+    }
+    #flexContainer6 div:nth-of-type(1) {
+      justify-content: flex-end;
+    }
 
     /* 👉 Task 7 - [HINT] research flex-grow */
+    #flexContainer7 div:nth-of-type(2) {
+      flex-grow: 1;
+    }
+    #flexContainer7 div:nth-of-type(3) {
+      flex-grow: 2;
+    }
 
     /* 👉 Task 8 - [HINT] you got this! */
-
+    #flexContainer8 {
+      justify-content: space-between;
+    }
+    #flexContainer8 div:nth-of-type(1) {
+      justify-content: flex-end;
+    }
+    #flexContainer8 div:nth-of-type(2) {
+      align-self: center;
+    }
+    #flexContainer8 div:nth-of-type(3) {
+      align-self: flex-end;
+      justify-content: flex-start;
+    }
 
     /*
     👉 Part 2 of 2 👈
